--- a/Shop/Views/Shared/HeaderPartial.cshtml
+++ b/Shop/Views/Shared/HeaderPartial.cshtml
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="/Cars/List/electro"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Электроавтомобили</font></font></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Cars/List/fuel"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Класические автомобили</font></font></a>
+                <a class="nav-link" href="/Cars/List/fuel"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Классические автомобили</font></font></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/ShopCart/Index"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Корзина</font></font></a>
